fix cursor pointer on collapse button

--- a/frontend/app/components/comment/__action/_type/_collapse/comment__action_type_collapse.scss
+++ b/frontend/app/components/comment/__action/_type/_collapse/comment__action_type_collapse.scss
@@ -11,6 +11,7 @@
   text-align: center;
   border: 1px solid;
   border-radius: 2px;
+  cursor: pointer;
 
   &:hover {
     border-color: #0aa;
